[gd_scene load_steps=4 format=3 uid="uid://djjjvymyvvmin"]

[ext_resource type="Texture2D" uid="uid://bc7oxiv48kna4" path="res://Assets/DownloadOption.png" id="1_0ws0c"]
[ext_resource type="Script" uid="uid://cj6cwhpboryg5" path="res://Scripts/download_entry.gd" id="1_bycum"]
[ext_resource type="Texture2D" uid="uid://cau0tuhekw7u7" path="res://Assets/GreenCheck.png" id="2_bycum"]

[node name="DownloadEntry" type="Control"]
custom_minimum_size = Vector2(1600, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bycum")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 100.0
texture = ExtResource("1_0ws0c")

[node name="Status" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.5
offset_top = 12.5
offset_right = 312.5
offset_bottom = 312.5
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_bycum")

[node name="SetName" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(1250, 100)
layout_mode = 0
offset_left = 100.0
offset_right = 1350.0
offset_bottom = 100.0
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 30
text = "Godzilla King of the Monsters Challenger Deck"
vertical_alignment = 1

[node name="Update_Download" type="Button" parent="."]
layout_mode = 0
offset_left = 1350.0
offset_top = 12.5
offset_right = 1550.0
offset_bottom = 87.5
theme_override_font_sizes/font_size = 30
text = "Download"

[connection signal="pressed" from="Update_Download" to="." method="_on_update_download_pressed"]
